syntax = "proto3";

package echo_proto;

service EchoService{
    rpc Echo (EchoRequest) returns (EchoResponse){
    }
    // ORION:URL: GET /upper/1.1/{msg}
    rpc upper (UpperRequest) returns (UpperResponse){
    }
    rpc ABC(UpperRequest) returns (UpperResponse){
    }
}


message EchoRequest {
    // Param: ksdjsk
    string msg = 1;
}

message EchoResponse {
    string msg = 1;
}

message UpperRequest {
    string msg = 1;
}

message UpperResponse {
    string msg = 1;
}
